--- a/app/styles/atoms/theming/_color-palette.scss
+++ b/app/styles/atoms/theming/_color-palette.scss
@@ -369,7 +369,7 @@ $BLUE_GREY: (
   'text-black': ('lighten-5', 'lighten-4', 'lighten-3', 'lighten-2'),
   'text-white-solid': ('lighten-1', 'base', 'darken-1')
 );
-$MATERIAL_PALETTES: (
+$DEFAULT_PALETTES: (
   'red': $RED,
   'pink': $PINK,
   'purple': $PURPLE,
@@ -393,31 +393,9 @@ $MATERIAL_PALETTES: (
   'white': $WHITE
 );
 
-////
-// $color-palettes - Map of color palettes
-// @example Define and add a color palette to $color-palettes
-// $my-palette: (
-//  'default': #d0d0d0,
-//  'color-name-1': #333333,
-//  'color-name-2': color('red', 'lighten-1'),
-//  'gradient-name-1': linear-gradient(130deg, yellow, red)
-// )
-// $color-palettes: map-merge($color-palettes, ('my-palette': $my-palette));
-// color values in $my-palette can now be accessed by calling:
-// `color('my-palette', 'color-name-1')` to retrieve a specific shade
-// `color('my-palette')` to retrieve the $default-palette-shade (default is 'base'))
-////
-$color-palettes: () !default;
-
-// set the theme palettes and default palette shade
-$primary-palette: 'blue-grey' !default;
-$accent-palette: 'amber' !default;
-$error-palette: 'red' !default;
-$success-palette: 'green' !default;
-$default-palette-shade: 'base' !default;
-
 // merge in the default palettes
-$color-palettes: map-merge($MATERIAL_PALETTES, $color-palettes);
+$color-palettes: map-merge($DEFAULT_PALETTES, $color-palettes);
+// merge in the theme palettes
 $color-palettes: map-merge(
   (
     'primary': get($color-palettes, $primary-palette),
