--- a/app/styles/atoms/layout/_height.scss
+++ b/app/styles/atoms/layout/_height.scss
@@ -6,26 +6,20 @@
 // ============================================================================
 // Variables
 // ============================================================================
-$DEFAULT_OPTS: (
-  'default': inherit,
-  'auto': auto,
-  0: 0,
-  1: rem(8),
-  2: rem(16),
-  3: rem(24),
-  4: rem(32),
-  5: rem(56),
-  6: rem(64),
-  7: rem(128),
-  8: rem(256),
-  '25%': 25%,
-  '50%': 50%,
-  '75%': 75%,
-  '100%': 100%,
-  'vh25': 25vh,
-  'vh50': 50vh,
-  'vh75': 75vh,
-  'vh100': 100vh
+$DEFAULT_OPTS: map-merge(
+  (
+    'default': inherit,
+    'auto': auto,
+    '25%': 25%,
+    '50%': 50%,
+    '75%': 75%,
+    '100%': 100%,
+    '25vh': 25vh,
+    '50vh': 50vh,
+    '75vh': 75vh,
+    '100vh': 100vh
+  ),
+  $DEFAULT_SIZES
 );
 
 // merge in the default options
