--- a/app/styles/atoms/layout/_width.scss
+++ b/app/styles/atoms/layout/_width.scss
@@ -6,38 +6,32 @@
 // ============================================================================
 // Variables
 // ============================================================================
-$DEFAULT_OPTS: (
-  'default': inherit,
-  'auto': auto,
-  0: 0,
-  1: rem(8),
-  2: rem(16),
-  3: rem(24),
-  4: rem(32),
-  5: rem(56),
-  6: rem(64),
-  7: rem(128),
-  8: rem(256),
-  '10%': 10%,
-  '20%': 20%,
-  '25%': 25%,
-  '30%': 30%,
-  '33%': 33%,
-  '34%': 34%,
-  '40%': 40%,
-  '50%': 50%,
-  '60%': 60%,
-  '70%': 70%,
-  '75%': 75%,
-  '80%': 80%,
-  '90%': 90%,
-  '100%': 100%,
-  'one-third': calc(100% / 3),
-  'two-thirds': calc(100% / 1.5)
+$DEFAULT_OPTS: map-merge(
+  (
+    'default': inherit,
+    'auto': auto,
+    '10%': 10%,
+    '20%': 20%,
+    '25%': 25%,
+    '30%': 30%,
+    '33%': 33%,
+    '34%': 34%,
+    '40%': 40%,
+    '50%': 50%,
+    '60%': 60%,
+    '70%': 70%,
+    '75%': 75%,
+    '80%': 80%,
+    '90%': 90%,
+    '100%': 100%,
+    '1/3': calc(100% / 3),
+    '2/3': calc(100% / 1.5)
+  ),
+  $DEFAULT_SIZES
 );
 
 // merge in the default options
-$width-opts: map-merge($DEFAULT_OPTS, $aspect-ratios);
+$width-opts: map-merge($DEFAULT_OPTS, $width-opts);
 
 // ============================================================================
 // Mixins
